--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta property="og:url"                content="http://github.com/benjaminadk/css-sandbox/index.html" />
   <meta property="og:title"              content="CSS SANDBOX" />
   <meta property="og:description"        content="A CSS variable playground.  Make Something." />
-  <meta property="og:image"              content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
+  <meta property="og:image"              content="./Screenshot 2017-06-06 at 9.34.11 PM.png" />
   <link href="https://fonts.googleapis.com/css?family=Aladin|Barrio|Poiret+One|Reenie+Beanie|Satisfy|Special+Elite|Princess+Sofia" rel="stylesheet">
 
 
