--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CSS Sanbox</title>
-  <meta property="og:url"                content="http://github.com/benjaminadk/css-sandbox/index.html" />
+  <meta property="og:url"                content="https://benjaminadk.github.io/css-sandbox/index.html" />
   <meta property="og:title"              content="CSS SANDBOX" />
   <meta property="og:description"        content="A CSS variable playground.  Make Something." />
   <meta property="og:image"              content="./Screenshot 2017-06-06 at 9.34.11 PM.png" />
