--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta property="og:url"                content="https://benjaminadk.github.io/css-sandbox/index.html" />
   <meta property="og:title"              content="CSS SANDBOX" />
   <meta property="og:description"        content="A CSS variable playground.  Make Something." />
-  <meta property="og:image"              content="./Screenshot 2017-06-06 at 9.34.11 PM.png" />
+  <meta property="og:image"              content="https://raw.githubusercontent.com/benjaminadk/css-sandbox/master/Screenshot%202017-06-06%20at%209.34.11%20PM.png" />
   <link href="https://fonts.googleapis.com/css?family=Aladin|Barrio|Poiret+One|Reenie+Beanie|Satisfy|Special+Elite|Princess+Sofia" rel="stylesheet">
 
 
